--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Final project - creating funding page with MySQL, React, admin and user offices",
-  "main": "index.js",
   "scripts": {
-    "seed": "node ./seeder/index.js"
+    "seed": "node ./seeder/index.js",
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -25,8 +28,22 @@
   },
   "homepage": "https://github.com/Jonas-Petrikas/get_funded#readme",
   "dependencies": {
-    "@faker-js/faker": "^9.5.1",
+    "@faker-js/faker": "^9.5.0",
     "md5": "^2.3.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "vite": "^6.2.0"
   }
 }
